# quaso

./: .gitignore  Cargo.toml  README.md  justfile
examples/: async_life_cycle.rs  client_server.rs  coroutines.rs  editable.rs  gc.rs  ggpo.rs  gltf.rs  gltf_step_anim.rs  hello_world.rs  ldtk.rs  path.rs  pcg_island.rs  prediction_reconciliation.rs  rollback.rs  scripting.rs  spine.rs
resources/: stickerman.glb  stickman.glb
resources/ldtk/: world.ldtk
src/: audio.rs  character.rs  context.rs  coroutine.rs  game.rs  gc.rs  grid_world.rs  interactible.rs  lib.rs  scripting.rs  tag.rs  transformed.rs  value.rs
src/animation/: frame.rs  gltf.rs  mod.rs  spine.rs
src/assets/: anim_texture.rs  atlas_texture.rs  font.rs  gltf.rs  ldtk.rs  mod.rs  shader.rs  sound.rs  spine.rs  texture.rs
src/editor/: mod.rs
src/editor/features/: mod.rs  viewport.rs
src/editor/features/editable/: editables.rs  mod.rs  ui.rs
src/editor/ui/: mod.rs  split.rs
src/map/: grid_world.rs  ldtk.rs  mod.rs
src/multiplayer/: client_server.rs  clock.rs  csp_ssr.rs  ggpo.rs  local.rs  mod.rs  rollback.rs  tcp.rs  universal.rs
templates/fresh-start/: Cargo.toml  Cargo.toml.chrobry  index.html  justfile  justfile.chrobry
templates/fresh-start/src/game/: mod.rs
templates/fresh-start/src/game/states/: gameplay.rs
templates/slot-machine/: Cargo.toml  Cargo.toml.chrobry  build.rs  justfile  justfile.chrobry
templates/slot-machine/assets/: index.txt
templates/slot-machine/src/: main.rs
templates/slot-machine/src/game/: machine.rs  mod.rs
templates/slot-machine/src/game/states/: gameplay.rs
templates/top-down/: Cargo.toml  Cargo.toml.chrobry  justfile
templates/top-down/src/: lib.rs
templates/top-down/src/game/: item.rs  mod.rs  torch.rs
templates/top-down/src/game/drawables/: light.rs
templates/top-down/src/game/enemy/: conditions.rs  mod.rs
templates/top-down/src/game/enemy/ai/: pursue.rs  wait.rs  wander.rs
templates/top-down/src/game/enemy/tasks/: attack.rs  idle.rs  run.rs
templates/top-down/src/game/player/: conditions.rs  mod.rs
templates/top-down/src/game/player/tasks/: attack_axe.rs  attack_sword.rs  idle.rs  run.rs
templates/top-down/src/game/states/: game_end.rs  gameplay.rs  main_menu.rs  preloader.rs
templates/top-down/src/game/ui/: health_bar.rs  mod.rs  text_button.rs
templates/top-down/src/game/utils/: events.rs  mod.rs  space.rs
