[workspace]
members = ["templates/*"]

[package]
name = "quaso"
version = "0.37.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Toolset for making Micro Games quickly"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/quaso"
repository = "https://github.com/PsichiX/quaso"
documentation = "https://docs.rs/quaso"
readme = "README.md"
exclude = ["resources/", "templates/"]

[dependencies]
spitfire-core = "0.34"
spitfire-glow = "0.34"
spitfire-fontdue = "0.34"
spitfire-draw = "0.34"
spitfire-input = "0.34"
spitfire-gui = "0.34"
raui-core = "0.69"
raui-material = "0.69"
raui-immediate = "0.69"
raui-immediate-widgets = "0.69"
intuicio-data = "0.45"
intuicio-core = "0.45"
intuicio-derive = "0.45"
intuicio-backend-vm = "0.45"
intuicio-frontend-simpleton = { version = "0.45", default-features = false }
randscape = "0.1"
anput = "0.12"
nodio = "0.4"
keket = "0.14"
emergent = "1.7"
typid = "1"
image = "0.25"
fontdue = "0.9"
vek = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = "0.8"
noise = "0.9"
rand = "0.8"
kira = "0.9"
rstar = "0.12"
gilrs = "0.11"
anim8 = "1.4"
rusty_spine = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
getrandom = { version = "0.2" }
